# OOP_hw_updated

./: CMakeLists.txt  CS224-HW4-Solution-Demonstration.mkv  HUMania.cpp  HUMania.hpp  LoadExternalDependencies.cmake  README.md  bee.cpp  bee.hpp  butterfly.cpp  butterfly.hpp  drawing.hpp  game.cpp  game.hpp  main.cpp  objectCreator.cpp  objectCreator.hpp  pigeon.cpp  pigeon.hpp  unit.cpp  unit.hpp
